--- a/CanvasApp/Base.lproj/Main.storyboard
+++ b/CanvasApp/Base.lproj/Main.storyboard
@@ -1,26 +1,221 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="VNU-lJ-Je3">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Root View Controller-->
+        <scene sceneID="7hS-PT-5y8">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                <tableViewController id="MA8-tV-37c" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="Hmc-hk-OXW">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" red="1" green="0.25926604720000002" blue="0.92119487379999998" alpha="1" colorSpace="calibratedRGB"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="OGA-kw-1ns">
+                                <rect key="frame" x="0.0" y="92" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="OGA-kw-1ns" id="jlq-Sv-TsW">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="MA8-tV-37c" id="xTn-CR-LsQ"/>
+                            <outlet property="delegate" destination="MA8-tV-37c" id="gaD-1I-gSi"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="gms-8n-0Nb"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EcV-DN-5RB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="769.5" y="1506.5"/>
+        </scene>
+        <!--List-->
+        <scene sceneID="Wn3-Wk-UK9">
+            <objects>
+                <navigationController id="tQM-ys-FS4" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="List" image="ic_list_white.png" id="7sd-EG-PGE"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="mCk-w2-KL1">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="MA8-tV-37c" kind="relationship" relationship="rootViewController" id="WWM-KI-DQT"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mfE-pz-zqH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="255.5" y="1506.5"/>
+        </scene>
+        <!--Home-->
+        <scene sceneID="OGU-26-nny">
+            <objects>
+                <viewController id="fG5-dC-K0j" customClass="UINavigationController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="E3k-qT-Ar5"/>
+                        <viewControllerLayoutGuide type="bottom" id="7ky-s1-Sfj"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="2Li-OB-ASG">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XQU-6u-rMs">
+                                <rect key="frame" x="166" y="304" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" red="1" green="0.25926604720000002" blue="0.92119487379999998" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Home" image="ic_home_white.png" id="Rns-hC-rzj"/>
+                    <navigationItem key="navigationItem" id="12v-pi-Cie">
+                        <barButtonItem key="backBarButtonItem" title="Home" id="pX2-Va-K2F"/>
+                        <barButtonItem key="rightBarButtonItem" image="ic_create_white.png" id="CCg-aC-AdY">
+                            <color key="tintColor" red="1" green="0.25926604720000002" blue="0.92119487379999998" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <segue destination="7eo-dD-tMh" kind="presentation" id="aci-sH-72t"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="O8t-zE-T5Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="753.5" y="686.5"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ECl-T1-e8B">
+            <objects>
+                <navigationController id="7eo-dD-tMh" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="MKm-uV-lPW">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Ytq-Vf-fuH" kind="relationship" relationship="rootViewController" id="xuL-Vj-c09"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wct-dY-6wP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1459.5" y="1116.5"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="hU3-ha-E1z">
+            <objects>
+                <viewController id="Ytq-Vf-fuH" customClass="ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="5uL-aO-atu"/>
+                        <viewControllerLayoutGuide type="bottom" id="CLR-Sq-HK7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="CQf-h5-WgP">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="20L-kW-PgJ">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="0hn-Vz-j9I"/>
+                                    <barButtonItem title="R" id="UCh-XQ-UNI">
+                                        <connections>
+                                            <action selector="record:" destination="Ytq-Vf-fuH" id="LgW-Yd-owB"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="898-Wi-xMF"/>
+                                    <barButtonItem image="ic_play_arrow_white.png" id="3wt-Fa-chx">
+                                        <connections>
+                                            <action selector="play:" destination="Ytq-Vf-fuH" id="tBF-hF-mJZ"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="hTk-Hi-hPR"/>
+                                    <barButtonItem image="ic_stop_white.png" id="dmA-iJ-39t">
+                                        <connections>
+                                            <action selector="stop:" destination="Ytq-Vf-fuH" id="B57-eF-DI0"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Nv7-v7-6Rh"/>
+                                    <barButtonItem systemItem="refresh" id="89c-6A-0qz">
+                                        <connections>
+                                            <action selector="clear:" destination="Ytq-Vf-fuH" id="cbi-gt-iyz"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="QCE-Wy-Zia"/>
+                                </items>
+                                <color key="tintColor" red="1" green="0.25926604720000002" blue="0.92119487379999998" alpha="1" colorSpace="calibratedRGB"/>
+                            </toolbar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="9ta-2F-0GV">
+                        <barButtonItem key="leftBarButtonItem" title="Cancle" id="JG2-IW-Y6r">
+                            <connections>
+                                <action selector="cancel:" destination="Ytq-Vf-fuH" id="1ph-pd-pen"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f5D-F8-bTK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2030.5" y="1116.5"/>
+        </scene>
+        <!--Home-->
+        <scene sceneID="0Tr-4n-cMH">
+            <objects>
+                <navigationController id="fpT-LP-cUK" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Home" image="ic_home_white.png" id="Sfy-eo-Uot"/>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="29t-SF-Otu">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="fG5-dC-K0j" kind="relationship" relationship="rootViewController" id="9io-BY-2Wh"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FSH-gS-dwo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="255.5" y="686.5"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="QLb-Bh-0q6">
+            <objects>
+                <tabBarController id="VNU-lJ-Je3" sceneMemberID="viewController">
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="5Co-Sv-vPA">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="tintColor">
+                                <color key="value" red="0.96078431372549022" green="0.070588235294117646" blue="0.90196078431372551" alpha="1" colorSpace="calibratedRGB"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </tabBar>
+                    <connections>
+                        <segue destination="fpT-LP-cUK" kind="relationship" relationship="viewControllers" id="fjW-aD-5PI"/>
+                        <segue destination="tQM-ys-FS4" kind="relationship" relationship="viewControllers" id="b0O-5L-lR6"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0yn-fq-kv8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-564" y="995"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ic_create_white.png" width="24" height="24"/>
+        <image name="ic_home_white.png" width="24" height="24"/>
+        <image name="ic_list_white.png" width="24" height="24"/>
+        <image name="ic_play_arrow_white.png" width="24" height="24"/>
+        <image name="ic_stop_white.png" width="24" height="24"/>
+    </resources>
 </document>
